--- a/app/index.html
+++ b/app/index.html
@@ -169,9 +169,9 @@
             <div class="row">
                 <div class="col-sm-12 col-xs-12 featured-right">
                     <div class="featured">
-                        <img src="images/featured-02.jpg" class="img-responsive">
+                        <img src="images/aviao.png" class="img-responsive">
                         <div class="text">
-                            <h2>Christine Doe</h2>
+                            <h2>Aéreo</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor non sem eu faucibus.
                                 Aenean pellentesque dui tincidunt, dictum massa congue, euismod ipsum. Duis auctor in est
                                 ac dignissim.</p>
@@ -179,9 +179,9 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="featured">
-                        <img src="images/featured-05.jpg" class="img-responsive img-right">
+                        <img src="images/hotel.png" class="img-responsive img-right">
                         <div class="text text-right">
-                            <h2>Samantha Markesh</h2>
+                            <h2>Hotel</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor non sem eu faucibus.
                                 Aenean pellentesque dui tincidunt, dictum massa congue, euismod ipsum. Duis auctor in est
                                 ac dignissim.</p>
@@ -189,7 +189,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="featured">
-                        <img src="images/featured-06.jpg" class="img-responsive">
+                        <img src="images/info.png" class="img-responsive">
                         <div class="text">
                             <h2>Kesha Martinez</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor non sem eu faucibus.
@@ -225,7 +225,7 @@
             <ul class="timeline">
                 <li>
                     <div class="timeline-badge">
-                        <i class="fa fa-heart" aria-hidden="true"></i>
+                        <i class="fa fa-cocktail" aria-hidden="true"></i>
                     </div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -241,7 +241,7 @@
                 </li>
                 <li class="timeline-inverted" style="margin-top:10px;">
                     <div class="timeline-badge">
-                        <i class="fa fa-heart" aria-hidden="true"></i>
+                        <i class="fa fa-church" aria-hidden="true"></i>
                     </div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -259,7 +259,7 @@
                 </li>
                 <li style="margin-top:10px;">
                     <div class="timeline-badge">
-                        <i class="fa fa-heart" aria-hidden="true"></i>
+                        <i class="fa fa-umbrella-beach" aria-hidden="true"></i>
                     </div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -275,7 +275,7 @@
                 </li>
                 <li class="timeline-inverted" style="margin-top:10px;">
                     <div class="timeline-badge">
-                        <i class="fa fa-heart" aria-hidden="true"></i>
+                        <i class="fa fa-sun" aria-hidden="true"></i>
                     </div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
@@ -292,7 +292,7 @@
                 <li>
                     <div class="timeline-end">
                         <div class="timeline-badge">
-                            <i class="fa fa-heart" aria-hidden="true"></i>
+                            <i class="fa fa-plane-departure" aria-hidden="true"></i>
                         </div>
                     </div>
                 </li>
