--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
                     <div class="hora">5:00
                         <span>pm</span>
                     </div>
-                    <div class="lugar">
+                    <div class="lugar" style="padding-bottom: 100px;">
                         <h3>Hard Rock Hotel & Casino Punta Cana</h3>
                     </div>
                 </div>
@@ -99,10 +99,10 @@
                                 <span class="about_picframe"></span>
                                 <div class="about_social">
                                     <a href="https://www.facebook.com/bez.lena" target="_blank" class="facebook">
-                                        <i class="fa fa-facebook"></i>
+                                        <i class="fab fa-facebook-f"></i>
                                     </a>
                                     <a href="https://www.instagram.com/bia_lena" target="_blank" class="instagram">
-                                        <i class="fa fa-instagram"></i>
+                                        <i class="fab fa-instagram"></i>
                                     </a>
                                 </div>
                                 <div class="about_pic">
@@ -123,10 +123,10 @@
                                 <span class="about_picframe"></span>
                                 <div class="about_social">
                                     <a href="https://www.facebook.com/le.yoshikay" target="_blank" class="facebook">
-                                        <i class="fa fa-facebook"></i>
+                                        <i class="fab fa-facebook-f"></i>
                                     </a>
                                     <a href="https://www.instagram.com/leandroyoshikay" target="_blank" class="instagram">
-                                        <i class="fa fa-instagram"></i>
+                                        <i class="fab fa-instagram"></i>
                                     </a>
                                 </div>
                                 <div class="about_pic">
@@ -179,7 +179,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="featured">
-                        <img src="images/hotel.png" class="img-responsive img-right">
+                        <img src="images/hardrock_logo.png" class="img-responsive img-right">
                         <div class="text text-right">
                             <h2>Hotel</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor non sem eu faucibus.
@@ -209,9 +209,9 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2 col-xs-12 text-center">
                     <div class="title-block">
-                        <h1>Our
+                        <h1>Os
                             <span>
-                                <em>Story</em>
+                                <em>Eventos</em>
                             </span>
                         </h1>
                         <div class="divider"></div>
@@ -289,6 +289,22 @@
                         </div>
                     </div>
                 </li>
+                <li style="margin-top:10px;">
+                    <div class="timeline-badge">
+                        <i class="fa fa-plane-departure" aria-hidden="true"></i>
+                    </div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h2 class="timeline-title">Feb
+                                <span>16</span> 2016</h2>
+                        </div>
+                        <div class="timeline-body text-center">
+                            <h2 class="timeline-title">Trip to caribbean</h2>
+                            <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis
+                                porris, paradis. Paisis, filhis, espiritis santis.</p>
+                        </div>
+                    </div>
+                </li>
                 <li>
                     <div class="timeline-end">
                         <div class="timeline-badge">
@@ -299,102 +315,18 @@
             </ul>
         </div>
     </section>
-
-    <!-- START SECTION: gallery -->
-    <section id="gallery" class="bg-cinza">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2 col-xs-12 text-center">
-                    <div class="title-block">
-                        <h1>Photo
-                            <span>
-                                <em>Gallery</em>
-                            </span>
-                        </h1>
-                        <div class="divider"></div>
-                        <p>
-                            <em>Dolor sit amet, consectetur adipiscing elit. Mauris porttitor non sem eu faucibus. Aenean pellentesque
-                                dui tincidunt, dictum massa congue, euismod ipsum. Duis auctor in est ac dignissim.</em>
-                        </p>
-                        <div class="gallery_nav">
-                            <button class="btn btn-primary btn-bordered filter-button active" data-filter="all">All</button>
-                            <button class="btn btn-primary btn-bordered filter-button" data-filter="gallery-family">Family</button>
-                            <button class="btn btn-primary btn-bordered filter-button" data-filter="gallery-friends">Friends</button>
-                            <button class="btn btn-primary btn-bordered filter-button" data-filter="gallery-trips">Trips</button>
-                            <button class="btn btn-primary btn-bordered filter-button" data-filter="gallery-portraits">Portraits</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row gallery-popup">
-
-                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter gallery-family">
-                    <a href="images/gallery-image-01.jpg" class="mfp-image" title="Gallery image title">
-                        <img src="images/gallery-image-01.jpg" class="img-responsive" alt="Gallery image">
-                    </a>
-                </div>
-
-                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter gallery-friends">
-                    <a href="images/gallery-image-02.jpg" class="mfp-image" title="Gallery image title">
-                        <img src="images/gallery-image-02.jpg" class="img-responsive" alt="Gallery image">
-                    </a>
-                </div>
-
-                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter gallery-family">
-                    <a href="images/gallery-image-03.jpg" class="mfp-image" title="Gallery image title">
-                        <img src="images/gallery-image-03.jpg" class="img-responsive" alt="Gallery image">
-                    </a>
-                </div>
-
-                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter gallery-portraits">
-                    <a href="images/gallery-image-04.jpg" class="mfp-image" title="Gallery image title">
-                        <img src="images/gallery-image-04.jpg" class="img-responsive" alt="Gallery image">
-                    </a>
-                </div>
-
-                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter gallery-trips">
-                    <a href="images/gallery-image-05.jpg" class="mfp-image" title="Gallery image title">
-                        <img src="images/gallery-image-05.jpg" class="img-responsive" alt="Gallery image">
-                    </a>
-                </div>
-
-                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter gallery-portraits">
-                    <a href="images/gallery-image-06.jpg" class="mfp-image" title="Gallery image title">
-                        <img src="images/gallery-image-06.jpg" class="img-responsive" alt="Gallery image">
-                    </a>
-                </div>
-
-                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter gallery-trips">
-                    <a href="images/gallery-image-07.jpg" class="mfp-image" title="Gallery image title">
-                        <img src="images/gallery-image-07.jpg" class="img-responsive" alt="Gallery image">
-                    </a>
-                </div>
-
-                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter gallery-portraits">
-                    <a href="images/gallery-image-08.jpg" class="mfp-image" title="Gallery image title">
-                        <img src="images/gallery-image-08.jpg" class="img-responsive" alt="Gallery image">
-                    </a>
-                </div>
-
-                <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter gallery-portraits">
-                    <a href="images/gallery-image-09.jpg" class="mfp-image" title="Gallery image title">
-                        <img src="images/gallery-image-09.jpg" class="img-responsive" alt="Gallery image">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- END SECTION: gallery -->
+    
+    <section id="bg-3" class="bg-3"> </section>
 
     <!-- START SECTION: rsvp -->
-    <section id="rsvp">
+    <section id="rsvp" >
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 col-xs-12 text-center">
                     <div class="title-block">
-                        <h1>Are You
+                        <h1>Confirme
                             <span>
-                                <em>Attending?</em>
+                                <em>sua Presença</em>
                             </span>
                         </h1>
                         <div class="divider"></div>
@@ -407,36 +339,24 @@
                 <div class="col-md-8 col-md-offset-2 col-xs-12 text-center">
 
                     <form id="ajaxForm" data-toggle="validator" novalidate="true">
-                        <div class="row bot-mrg-20">
-                            <div class="col-md-4 text-center">
-                                <input type="checkbox" id="checkbox-1" name="events[]" value="Pre-Wedding Dinner">
-                                <label for="checkbox-1" class="checkbox-button">
-                                    <i class="fa fa-circle-o" aria-hidden="true"></i> Pre-Wedding Dinner</label>
-                                <p>Victory Gardens Hall, 11 Grant Ave. Carteret NJ 9851 (732) 841-45 90, (732) 634-13 86 info@emailname.com</p>
-                            </div>
-                            <div class="col-md-4 text-center">
-                                <input type="checkbox" id="checkbox-2" name="events[]" value="Ceremony">
-                                <label for="checkbox-2" class="checkbox-button">
-                                    <i class="fa fa-circle-o" aria-hidden="true"></i> Ceremony</label>
-                                <p>Victory Gardens Hall, 11 Grant Ave. Carteret NJ 9851 (732) 841-45 90, (732) 634-13 86 info@emailname.com</p>
-                            </div>
-                            <div class="col-md-4 text-center">
-                                <input type="checkbox" id="checkbox-3" name="events[]" value="Party">
-                                <label for="checkbox-3" class="checkbox-button">
-                                    <i class="fa fa-circle-o" aria-hidden="true"></i> Party</label>
-                                <p>Victory Gardens Hall, 11 Grant Ave. Carteret NJ 9851 (732) 841-45 90, (732) 634-13 86 info@emailname.com</p>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="name" placeholder="Nome Completo" required="">
+                                    <div class="help-block with-errors"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="name" placeholder="Your Name" required="">
+                                    <input type="email" class="form-control" name="email" placeholder="Seu Email" required="">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group">
-                                    <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                                    <input type="tel" class="form-control" name="tel" placeholder="Whatsapp" required="">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
@@ -444,14 +364,25 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <textarea rows="5" class="form-control" name="message" placeholder="Write your message...​" required=""></textarea>
+                                    <!--textarea rows="5" class="form-control" name="message" placeholder="Write your message...​" required=""></textarea-->
+                                    <span>Quantidade de pessoas:</span>
+                                    <select>
+                                        <option>1</option>
+                                        <option>2</option>
+                                        <option>3</option>
+                                        <option>4</option>
+                                        <option>5</option>
+                                        <option>6</option>
+                                        <option>7</option>
+                                        <option>8</option>
+                                    </select>
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
                         </div>
                     </form>
 
-                    <button class="btn btn-primary btn-lg" id="ajaxFormSubmit">I´m Attending</button>
+                    <button class="btn btn-primary btn-lg" id="ajaxFormSubmit">Eu vou!</button>
                 </div>
             </div>
         </div>
@@ -459,19 +390,16 @@
     <!-- END SECTION: rsvp -->
 
     <!-- START: footer -->
-    <section id="footer" class="img-bg-5">
+    <section id="footer" class="bg-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 col-xs-12 text-center">
-                    <h1>Thank You!</h1>
+                    <h1>Obrigado!</h1>
                     <ul class="names">
-                        <li>Marttin</li>
+                        <li>Beatriz</li>
                         <li class="circle">&amp;</li>
-                        <li>Julianne</li>
+                        <li>Leandro</li>
                     </ul>
-                    <div class="copyright">All Rights Reserved © 2017 | Design:
-                        <a href="http://marttinfisher.com/" target="_blank">Marttin Fisher</a>
-                    </div>
                 </div>
             </div>
         </div>
