--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="Casamento Beatriz e Leandro">
 
     <title>Casamento Beatriz & Leandro</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="static/styles/main.css">
 </head>
 
 <body>
@@ -106,7 +106,7 @@
                                     </a>
                                 </div>
                                 <div class="about_pic">
-                                    <img src="images/image123.jpg" alt="" title="">
+                                    <img src="static/images/image123.jpg" alt="" title="">
                                 </div>
                             </div>
                             <p>Love is friendship that has caught fire. It is quiet understanding, mutual confidence,
@@ -130,7 +130,7 @@
                                     </a>
                                 </div>
                                 <div class="about_pic">
-                                    <img src="images/image12_3.jpg" alt="" title="">
+                                    <img src="static/images/image12_3.jpg" alt="" title="">
                                 </div>
                             </div>
                             <p>Love is friendship that has caught fire. It is quiet understanding, mutual confidence,
@@ -169,7 +169,7 @@
             <div class="row">
                 <div class="col-sm-12 col-xs-12 featured-right">
                     <div class="featured">
-                        <img src="images/aviao.png" class="img-responsive">
+                        <img src="static/images/aviao.png" class="img-responsive">
                         <div class="text">
                             <h2>Aéreo</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor non sem eu faucibus.
@@ -179,7 +179,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="featured">
-                        <img src="images/hardrock_logo.png" class="img-responsive img-right">
+                        <img src="static/images/hardrock_logo.png" class="img-responsive img-right">
                         <div class="text text-right">
                             <h2>Hotel</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor non sem eu faucibus.
@@ -189,7 +189,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="featured">
-                        <img src="images/info.png" class="img-responsive">
+                        <img src="static/images/info.png" class="img-responsive">
                         <div class="text">
                             <h2>Kesha Martinez</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris porttitor non sem eu faucibus.
