--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,10 @@
 
     <title>Casamento Beatriz & Leandro</title>
     <link rel="stylesheet" href="static/styles/main.css">
+
+    <!-- build:js scripts/vendor/modernizr.js -->
+    <script src="/bower_components/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -406,30 +410,18 @@
     </section>
     <!-- END: footer -->
 
-    <!-- START: scripts -->
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="./Bodas - HTML Wedding Template_files/jquery-1.12.4.min.js.download"></script>
-    <!-- Bootstrap main Js File-->
-    <script src="./Bodas - HTML Wedding Template_files/bootstrap.min.js.download"></script>
-    <!-- Sticky Navbar -->
-    <script type="text/javascript" src="./Bodas - HTML Wedding Template_files/jquery.sticky.js.download"></script>
-    <script type="text/javascript" src="./Bodas - HTML Wedding Template_files/jquery.nav.js.download"></script>
-    <!-- owl-carousel -->
-    <script src="./Bodas - HTML Wedding Template_files/owl.carousel.min.js.download"></script>
-    <!-- Stellar -->
-    <script src="./Bodas - HTML Wedding Template_files/jquery.stellar.min.js.download"></script>
-    <!-- gallery-grid -->
-    <script src="./Bodas - HTML Wedding Template_files/gallery-grid.js.download"></script>
-    <!-- Magnific Popup core JS file -->
-    <script src="./Bodas - HTML Wedding Template_files/jquery.magnific-popup.min.js.download"></script>
-    <!-- Bootstrap Validator -->
-    <script src="./Bodas - HTML Wedding Template_files/validator.min.js.download"></script>
-    <!-- TimeCircles-countdown -->
-    <script src="./Bodas - HTML Wedding Template_files/TimeCircles.js.download"></script>
+        <!-- build:js scripts/vendor.js -->
+    <!-- bower:js -->
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/bower_components/bootstrap-validator/js/validator.js"></script>
+    <script src="/bower_components/jQuery-One-Page-Nav/jquery.nav.js"></script>
+    <script src="/bower_components/stellar/src/jquery.stellar.js"></script>
+    <script src="/bower_components/sticky/jquery.sticky.js"></script>
 
-    <!-- Theme Main Js file -->
-    <script src="./Bodas - HTML Wedding Template_files/theme-main.js.download"></script>
-    <!-- END: scripts -->
+    <!-- build:js scripts/main.js -->
+    <script src="scripts/components/parallax.js"></script>
+    <script src="scripts/header/menu.js"></script>
 
 </body>
 
