--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,8 @@
 
 <body>
     <!-- Home -->
-    <section id="home">
-        <div class="container">
+    <section id="home" data-image="static/images/bg-11.jpg" data-cover-ratio="0.9">
+        <div class="container homeid">
             <div class="row">
                 <div class="col-xs-12">
                     <ul class="nomes">
@@ -144,7 +144,7 @@
     </section>
     <!-- Casal -->
 
-    <section id="bg-1" class="bg-1"></section>
+    <section id="bg-1" class="bg-1" data-image="static/images/bg-1.jpg" data-cover-ratio="0.5"></section>
 
     <section id="a-viagem">
         <div class="container">
@@ -232,7 +232,7 @@
         </div>
     </section>
 
-    <section id="bg-2" class="bg-2"> </section>
+    <section id="bg-2" class="bg-2" data-image="static/images/bg-2.jpg" data-cover-ratio="0.5"> </section>
 
     <section id="eventos">
         <div class="container">
@@ -339,7 +339,7 @@
         </div>
     </section>
     
-    <section id="bg-3" class="bg-3"> </section>
+    <section id="bg-3" class="bg-3" data-image="static/images/bg-5.jpg" data-cover-ratio="0.5"> </section>
 
     <!-- START SECTION: rsvp -->
     <section id="confirme" >
@@ -415,8 +415,8 @@
     <!-- END SECTION: rsvp -->
 
     <!-- START: footer -->
-    <section id="footer" class="bg-4">
-        <div class="container">
+    <section id="footer" class="bg-4" data-image="static/images/bg-4.jpg" data-cover-ratio="0.5">
+        <div class="container footerid">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 col-xs-12 text-center">
                     <h1>Obrigado!</h1>
@@ -432,8 +432,9 @@
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/bower_components/bootstrap-validator/js/validator.js"></script>
     <script src="/bower_components/jQuery-One-Page-Nav/jquery.nav.js"></script>
-    <script src="/bower_components/stellar/src/jquery.stellar.js"></script>
+    <script src="/bower_components/Parallax-ImageScroll/jquery.imageScroll.min.js"></script>
     <script src="/bower_components/sticky/jquery.sticky.js"></script>
+    
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/components/parallax.js"></script>
