--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <!-- Home -->
-    <section id="home" data-image="static/images/bg-11.jpg" data-cover-ratio="0.9">
+    <div id="home" data-image="static/images/bg-11.jpg" data-cover-ratio="0.9">
         <div class="container homeid">
             <div class="row">
                 <div class="col-xs-12">
@@ -40,7 +40,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- Home -->
 
     <!-- Navegacao -->
@@ -144,7 +144,7 @@
     </section>
     <!-- Casal -->
 
-    <section id="bg-1" class="bg-1" data-image="static/images/bg-1.jpg" data-cover-ratio="0.5"></section>
+    <div id="bg-1" class="bg-1" data-image="static/images/bg-1.jpg" data-cover-ratio="0.5"></div>
 
     <section id="a-viagem">
         <div class="container">
@@ -232,7 +232,7 @@
         </div>
     </section>
 
-    <section id="bg-2" class="bg-2" data-image="static/images/bg-2.jpg" data-cover-ratio="0.5"> </section>
+    <div id="bg-2" class="bg-2" data-image="static/images/bg-2.jpg" data-cover-ratio="0.5"> </div>
 
     <section id="eventos">
         <div class="container">
@@ -339,7 +339,7 @@
         </div>
     </section>
     
-    <section id="bg-3" class="bg-3" data-image="static/images/bg-5.jpg" data-cover-ratio="0.5"> </section>
+    <div id="bg-3" class="bg-3" data-image="static/images/bg-5.jpg" data-cover-ratio="0.5"> </div>
 
     <!-- START SECTION: rsvp -->
     <section id="confirme" >
@@ -415,7 +415,7 @@
     <!-- END SECTION: rsvp -->
 
     <!-- START: footer -->
-    <section id="footer" class="bg-4" data-image="static/images/bg-4.jpg" data-cover-ratio="0.5">
+    <div id="footer" class="bg-4" data-image="static/images/bg-4.jpg" data-cover-ratio="0.5">
         <div class="container footerid">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1 col-xs-12 text-center">
@@ -423,7 +423,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <!-- END: footer -->
 
     <!-- build:js scripts/vendor.js -->
