--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,7 @@
                     <div class="container">
                         <i class="headerHeart fa fa-heart"></i>
                         <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav_menu">
+                            <button type="button" class="navbar-toggle scroll-event-inhoshi" data-toggle="collapse" data-target="#nav_menu">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
