--- a/app/index.html
+++ b/app/index.html
@@ -131,11 +131,8 @@
                                     <img src="static/images/image12_3.jpg" alt="" title="">
                                 </div>
                             </div>
-                            <p>Love is friendship that has caught fire. It is quiet understanding, mutual confidence,
-                                <a href="#">sharing and forgiving</a>. It is loyalty through good and bad times. It settles for less
-                                than perfection and
-                                <strong>makes allowances</strong> for human weaknesses "
-                                <a href="#">LOVE QUOTE</a>":</p>
+                            <p>Em 32 anos ainda não aprendi a conviver com mau humor, e o mais extraordinário durante esses últimos 6 anos juntos é que sempre é divertido! 
+                                E pretendo dessa forma continuar a nossa jornada. </p>
                         </div>
                     </div>
                 </div>
