--- a/app/index.html
+++ b/app/index.html
@@ -12,10 +12,6 @@
 
     <title>Casamento Beatriz & Leandro</title>
     <link rel="stylesheet" href="static/styles/main.css">
-
-    <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
-    <!-- endbuild -->
 </head>
 
 <body>
@@ -109,7 +105,7 @@
                                 </div>
                             </div>
                             <p>29 anos e cheia de energia para continuar desbravando o mundo.
-                                Um das coisas mais legais do meu namoro com o Leandro foi ver, durante esses últimos 6 anos, 
+                                Uma das coisas mais legais do meu namoro com o Leandro foi ver, durante esses últimos 6 anos, 
                                 como a paixão dele por viagens cresceu e eu espero que junto possamos continuar cultivando isso.
                                 </p>
                         </div>
@@ -360,7 +356,7 @@
                 </div>
                 <div class="col-md-8 col-md-offset-2 col-xs-12 text-center">
 
-                    <form id="ajaxForm" data-toggle="validator" novalidate="true">
+                    <form id="cadastrarForm" method="post"data-toggle="validator" novalidate="true">
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
@@ -404,7 +400,7 @@
                         </div>
                     </form>
 
-                    <button class="btn btn-primary btn-lg" id="ajaxFormSubmit">Eu vou!</button>
+                    <button class="btn btn-primary btn-lg" type="submit" id="cadastrarSubmit">Eu vou!</button>
                 </div>
             </div>
         </div>
@@ -423,8 +419,17 @@
     </div>
     <!-- END: footer -->
 
+    <div class="modal__wrap">
+        <div class="modal__align">
+            <div class="modal__content">
+            </div>
+        </div>
+    </div>
+
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="/bower_components/axios/dist/axios.js"></script>
+    <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/bower_components/bootstrap-validator/js/validator.js"></script>
@@ -436,6 +441,7 @@
     <!-- build:js scripts/main.js -->
     <script src="scripts/components/parallax.js"></script>
     <script src="scripts/header/menu.js"></script>
+    <script src="scripts/components/form.js"></script>
 
 </body>
 
