--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,7 @@
                                     <img src="static/images/image12_3.jpg" alt="" title="">
                                 </div>
                             </div>
-                            <p>Em 32 anos ainda não aprendi a conviver com mau humor, e o mais extraordinário durante esses últimos 6 anos juntos é que sempre é divertido! 
+                            <p>Em 32 anos sempre procurei trazer alegria ao meu redor, e o mais extraordinário durante esses 6 anos com ela é que sempre é divertido! 
                                 E pretendo dessa forma continuar a nossa jornada. </p>
                         </div>
                     </div>
