--- a/app/index.html
+++ b/app/index.html
@@ -127,8 +127,8 @@
                                     <img src="static/images/image12_3.jpg" alt="" title="">
                                 </div>
                             </div>
-                            <p>Em 32 anos sempre procurei trazer alegria ao meu redor, e o mais extraordinário durante esses 6 anos com ela é que sempre é divertido! 
-                                E pretendo dessa forma continuar a nossa jornada. </p>
+                            <p>Em 32 anos, sempre procurei trazer alegria ao meu redor e ao nosso relacionamento. E o mais extraordinário é que com ela, sempre é divertido! 
+                                O nosso casamento selará a diversão que tem sido a nossa jornada. </p>
                         </div>
                     </div>
                 </div>
