--- a/app/index.html
+++ b/app/index.html
@@ -383,7 +383,7 @@
                             <div class="col-md-12">
                                 <div class="form-group">
                                     <!--textarea rows="5" class="form-control" name="message" placeholder="Write your message...​" required=""></textarea-->
-                                    <span>Quantidade de pessoas:</span>
+                                    <span class="bold">Quantidade de pessoas</span>
                                     <select class="form-control selectCenter"  name="qtde" required="">
                                         <option>1</option>
                                         <option>2</option>
