fix mensagem data limite

--- a/app/index.html
+++ b/app/index.html
@@ -347,7 +347,7 @@
                         </h1>
                         <div class="divider"></div>
                         <p>
-                            <em>Confirmando a sua presença, consideramos que está de acordo com os valores acima.
+                            <em>Confirmando a sua presença <u><b>até dia 30 de novembro</b></u>, consideramos que está de acordo com os valores acima.
                                 Após a confirmação entraremos em contato para maiores detalhes.
                             </em>
                         </p>
